--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -19,4 +19,11 @@
     padding: 2px 10px 2px 50px;
     border: 1px solid #ddd;
 }
+.alert{
+    position: absolute;
+    bottom: 5vh;
+    z-index: 10000;
+    right: 0px;
+}
+
 
