--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,10 +1,5 @@
-#index-page .fa-star-o, .fa-star{
+.fa-camera{
     color:#f39c12;
-
-}
-#show-page .fa-star-o, .fa-star{
-    color:#f39c12;
-
 }
 
 .tooltip-inner {
